app/css/app.css
html {
  height: 100%;
  background-color: white;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
body {
  font-family: Lato, 'sans-serif';
  margin: 0;
  padding: 0;
  height: 100%;
  color: rgba(31, 45, 61, 0.5);
}
body #app-wrap {
  min-height: 100%;
  background-color: #99cfcf;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}
.view-container {
  -webkit-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #99cfcf;
  padding: 55px 0 0;
}
.view-frame {
  background-color: #99cfcf;
  display: inline-block;
  width: 100%;
}
global-navigation {
  width: 100%;
  display: block;
}
global-navigation #header {
  z-index: 1000;
  width: 100%;
  height: 55px;
  box-sizing: border-box;
  box-shadow: -3px -3px 3px 0 rgba(0, 0, 0, 0.19), 3px 0 3px 0 rgba(0, 0, 0, 0.19), 0 3px 3px 0 rgba(0, 0, 0, 0.23);
  background-color: white;
  position: fixed;
}
global-navigation #header #main-logo {
  display: inline-block;
  height: 100%;
}
global-navigation #header #main-logo a:hover .line-art span.outline img {
  opacity: .75;
}
global-navigation #header #main-logo a {
  margin-top: 8px;
  text-decoration: none;
  display: inline-block;
  height: 100%;
}
global-navigation #header #main-logo a .line-art {
  position: relative;
  display: inline-block;
  vertical-align: top;
  margin: 0 0 0 5px;
}
global-navigation #header #main-logo a .line-art span.outline img {
  width: 40px;
  position: absolute;
  opacity: .5;
  display: inline-block;
}
global-navigation #header #main-logo a .line-art span.outline.home img {
  opacity: .75;
}
global-navigation #header #main-logo a .line-art span.initials img {
  width: 40px;
  position: absolute;
  opacity: .5;
  display: inline-block;
}
global-navigation #header #main-logo a h1 {
  font-weight: 500;
  font-size: 1.5em;
  margin: 5px 0 0 40px;
  padding-top: 0;
  color: rgba(31, 45, 61, 0.5);
  display: inline-block;
}
global-navigation #header #main-logo a h6 {
  margin: 5px 0 0;
  font-weight: 300;
  font-size: 1em;
  letter-spacing: .015em;
  color: rgba(31, 45, 61, 0.7);
  display: inline-block;
}
global-navigation #header .main-nav {
  float: right;
  display: inline-block;
  height: 39px;
}
global-navigation #footer {
  background-color: #99cfcf;
}
global-navigation .main-nav ul {
  margin: 0;
  padding: 16px 0 0;
  list-style: none;
}
global-navigation .main-nav ul li {
  display: inline-block;
  padding: 0 0 5px;
  margin: 0 10px;
  vertical-align: top;
  font-size: 16px;
}
global-navigation .main-nav ul li a {
  text-decoration: none;
  color: rgba(31, 45, 61, 0.5);
  font-weight: 300;
}
global-navigation .main-nav ul li a span {
  display: block;
}
global-navigation .main-nav ul li a span.bottom-border {
  width: 0;
  display: block;
  height: 2px;
  background-color: rgba(31, 45, 61, 0.5);
  margin: 5px auto;
}
global-navigation .main-nav ul li a.active span.bottom-border {
  animation: 0.25s roll-over;
  width: 100%;
}
global-navigation .main-nav ul li a.inactive span.bottom-border {
  animation: 0.25s roll-out;
  width: 0;
}
@keyframes logo-roll-over {
  from {
    opacity: .5;
  }
  to {
    opacity: .75;
  }
}
@keyframes roll-over {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}
@keyframes roll-out {
  from {
    width: 100%;
  }
  to {
    width: 0;
  }
}
@media (max-width: 640px) {
  global-navigation #header #main-logo a h1,
  global-navigation #header #main-logo a h6 {
    display: none;
  }
}
home-page {
  background-color: #99cfcf;
  max-width: 1080px;
  width: 100%;
  display: block;
  margin: 20px auto 0;
}
home-page h1 {
  font-size: 2.3em;
}
about-page {
  background-color: #99cfcf;
  max-width: 1080px;
  width: 100%;
  display: block;
  margin: 20px auto 0;
  height: 100%;
}
about-page h1 {
  font-size: 2.3em;
}
contact-page {
  background-color: #99cfcf;
  max-width: 1080px;
  width: 100%;
  display: block;
  margin: 20px auto 0;
}
contact-page h1 {
  font-size: 2.3em;
}
portfolio-page {
  background-color: #99cfcf;
  max-width: 1080px;
  width: 100%;
  display: block;
  margin: 20px auto 0;
}
portfolio-page h1 {
  font-size: 2.3em;
}
resume-page {
  background-color: #99cfcf;
  max-width: 816px;
  display: block;
  margin: 20px auto 0;
}
resume-page h1 {
  font-size: 2.3em;
}
resume-page #google-resume-doc.loaded {
  animation: 1s fade-in;
  opacity: 1;
  margin: 0 0 80px;
  background-color: white;
  box-shadow: 0 0 0 0.75pt #d1d1d1, 0 0 3pt 0.75pt #ccc;
}
resume-page #google-resume-doc.loaded .container {
  padding: 31.7pt 57.6pt 27pt 57.6pt;
}
resume-page #google-resume-doc {
  max-width: 816px;
  width: 100%;
  border: 0;
}
resume-page #google-resume-doc .container {
  max-width: 496.8pt;
  padding: 0;
}
resume-page #google-resume-doc .container .c16 {
  font-weight: 300;
}
resume-page #google-resume-doc .container .c18 {
  margin-left: 0;
}
@media (max-width: 640px) {
  resume-page #google-resume-doc.loaded .container {
    padding: 5.7pt 23.6pt 5.7pt 23.6pt;
  }
}
@media (max-width: 480px) {
  resume-page #google-resume-doc.loaded .container {
    padding: 2.7pt 13.6pt 2.7pt 13.6pt;
  }
}
/* View: Project list */
project-list {
  background-color: #99cfcf;
  max-width: 1080px;
  width: 100%;
  display: block;
  margin: 0 auto;
  height: 100%;
}
project-list h1 {
  font-size: 2.3em;
}
project-list ul {
  list-style: none;
  padding: 0;
}
project-list ul li.project-list-item a {
  text-decoration: none;
  color: rgba(31, 45, 61, 0.5);
}
/* View: Project detail */
project-detail {
  max-width: 1080px;
  width: 100%;
  display: block;
  margin: 0 auto;
  height: 100%;
}
project-detail h1 {
  font-size: 2.3em;
}
project-detail ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
project-detail ul li {
  position: relative;
  display: inline-block;
  margin: 0;
  padding: 0;
  vertical-align: top;
  cursor: pointer;
}
project-detail ul li h1 {
  font-size: 2.3em;
}
.project-list-item.ng-enter,
.project-list-item.ng-leave,
.project-list-item.ng-move {
  transition: .5s linear all;
}
.project-list-item.ng-enter,
.project-list-item.ng-leave.ng-leave-active,
.project-list-item.ng-move {
  opacity: 0;
}
.project-list-item.ng-enter.ng-enter-active,
.project-list-item.ng-leave,
.phone-list-item.ng-move.ng-move-active {
  opacity: 1;
}
.view-frame.ng-enter,
.view-frame.ng-leave {
  left: 0;
  position: absolute;
  right: 0;
  top: 55px;
}
.view-frame.ng-enter {
  animation: 1s fade-in;
  z-index: 100;
}
.view-frame.ng-leave {
  animation: 1s fade-out;
  z-index: 99;
}
@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes fade-out {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

